--- a/Exercises/Database_OEF/OEF_3.1/templates/form.html
+++ b/Exercises/Database_OEF/OEF_3.1/templates/form.html
@@ -33,7 +33,7 @@
         </div>
     </div>
         <div>
-    <button type="submit" class="btn btn-primary ">Save</button>
+    <button type="submit" class="btn btn-light" value="verzenden" style="padding: 10px 100px; margin-left: 80px">Save</button>
         </div>
 
     </form>
