--- a/Exercises/Database_OEF/OEF_3.1/templates/form.html
+++ b/Exercises/Database_OEF/OEF_3.1/templates/form.html
@@ -1,7 +1,7 @@
 <div class= "container">
     <div class="row">
         <div class ="col-sm-6 col-sm-offset-3">
-    <form id="mainform" name="mainform" action="../library/save.php" method="post">
+    <form id="mainform" name="mainform" action="library/save.php" method="post">
     <div class="form-group row">
         <label for="img_id" class="col-sm-2 col-form-label">Id</label>
         <div class="col-sm-8">
