Fixed update function, sanitized input data, redirect after submit

--- a/Exercises/Database_OEF/OEF_3.1/templates/jumbo.html
+++ b/Exercises/Database_OEF/OEF_3.1/templates/jumbo.html
@@ -1,4 +1,4 @@
 <div class="jumbotron text-center">
-    <h1>Steden die je moet bezoeken</h1>
-    <p>Kies jow bestemming!</p>
+    <h1>@jumbo_title@</h1>
+    <p>@jumbo_subtitle@</p>
 </div>
