--- a/Exercises/Database_OEF/OEF_3.1/templates/form.html
+++ b/Exercises/Database_OEF/OEF_3.1/templates/form.html
@@ -1,6 +1,12 @@
 <div class= "container">
     <div class="row">
         <div class ="col-sm-6 col-sm-offset-3">
+            <!-- meta info -->
+            <input type="hidden" id="table" name="table" value="images">
+            <input type="hidden" id="pkey" name="pkey" value="img_id">
+            <input type="hidden" id="afterinsert" name="afterinsert" value="overzicht_steden.php">
+            <input type="hidden" id="afterupdate" name="afterupdate" value="overzicht_steden.php">
+            <!-- end meta info -->
     <form id="mainform" name="mainform" action="library/save.php" method="post">
     <div class="form-group row">
         <label for="img_id" class="col-sm-2 col-form-label">Id</label>
@@ -11,25 +17,25 @@
     <div class="form-group row">
         <label for="title" class="col-sm-2 col-form-label">Titel</label>
         <div class="col-sm-10">
-            <input type="text"  class="form-control" id="title" name="img_title" >
+            <input type="text"  class="form-control" id="title" name="img_title" value="@img_title@" >
         </div>
     </div>
     <div class="form-group row">
         <label for="Filename" class="col-sm-2 col-form-label">Filename</label>
         <div class="col-sm-10">
-            <input type="text"  class="form-control" id="Filename" name="img_filename" >
+            <input type="text"  class="form-control" id="Filename" name="img_filename" value="@img_filename@">
         </div>
     </div>
     <div class="form-group row">
         <label for="width" class="col-sm-2 col-form-label">Width</label>
         <div class="col-sm-10">
-            <input type="text"  class="form-control" id="width" name="img_width">
+            <input type="text"  class="form-control" id="width" name="img_width" value="@img_width@">
         </div>
     </div>
     <div class="form-group row">
         <label for="height" class="col-sm-2 col-form-label">Height</label>
         <div class="col-sm-10">
-            <input type="text"  class="form-control" id="height" name="img_height">
+            <input type="text"  class="form-control" id="height" name="img_height" value="@img_height@">
         </div>
     </div>
         <div>
