Fixed databank connection

--- a/Exercises/Database_OEF/OEF_4.1b/templates/register.html
+++ b/Exercises/Database_OEF/OEF_4.1b/templates/register.html
@@ -43,7 +43,7 @@
         <div class="form-group row">
             <label for="usr_password" class="col-sm-2 col-form-label">Repeat your password</label>
             <div class="col-sm-10">
-                <input type="password"  class="form-control" id="usr_password_check" name="usr_password_check" value="@usr_password_check@">
+                <input type="password"  class="form-control" id="usr_password_check" name="usr_password_check" value="@usr_password@">
                 @usr_password_error@
             </div>
         </div>
