--- a/Exercises/Database_OEF/OEF_4.1b/templates/form.html
+++ b/Exercises/Database_OEF/OEF_4.1b/templates/form.html
@@ -11,7 +11,7 @@
         <!-- end meta info -->
         <!-- security -->
         <input type="hidden" name="csrf" value="@csrf_token@">
-        <p><small>@csrf_token@</small></p>
+
         <!-- end security -->
     <div class="form-group row">
         <label for="img_id" class="col-sm-2 col-form-label">Id</label>
@@ -59,13 +59,13 @@
         </div>
 
         <div>
-    <button type="submit" class="btn btn-light" value="verzenden" style="padding: 10px 100px; margin-left: 80px">Save</button>
+    <button type="submit" class="btn btn-dark" value="verzenden" style="padding: 10px 100px; margin-left: 100px">Save</button>
         </div>
 
     </form>
         </div>
         <div class="row text-center">
-            <img alt=@img_title@ class="img-fluid" style="width: 50%; border-radius: 15px; margin-top: 10px;" src="img/@img_filename@">
+            <img alt=@img_title@ class="img-fluid" style="width: 70%; border-radius: 15px; margin-left: 120px; margin-top: 10px;" src="img/@img_filename@">
         </div>
         <div class ="col-sm-6 col-sm-offset-3">
 
