--- a/my_project/templates/navigation.html
+++ b/my_project/templates/navigation.html
@@ -9,7 +9,7 @@
         <div class="search">
           <!--  <input type="text" placeholder="search for doctor specialty" /> -->
           <!-- @select_speciality@-->
-          <form action="index.php" class="form-search" method="post">
+          <form action="search_results.php" class="form-search" method="post">
             <input
               type="hidden"
               id="search"
