--- a/my_project/templates/register.html
+++ b/my_project/templates/register.html
@@ -7,70 +7,70 @@
         <h1>Are you a doctor?</h1>
         <h1>Please register here</h1>
         <div class="input">
-            <input type="text" name="name" required value="@usr_name@"/>
-            <label for="name" class="label-name">
+            <input type="text" name="usr_name" required value="@usr_name@"/>
+            <label for="usr_name" class="label-name">
                 <span class="content-name">Name</span>
             </label>
             @usr_name_error@
 
         </div>
         <div class="input">
-            <input type="text" name="last_name" required value="@usr_last_name@"/>
-            <label for="last_name" class="label-name">
+            <input type="text" name="usr_last_name" required value="@usr_last_name@"/>
+            <label for="usr_last_name" class="label-name">
                 <span class="content-name">Last name</span>
             </label>
             @usr_last_name_error@
         </div>
         <div class="input">
-            <input type="text" name="email" required value="@usr_email@"/>
+            <input type="text" name="usr_email" required value="@usr_email@"/>
             @usr_email_error@
-            <label for="email" class="label-name">
+            <label for="usr_email" class="label-name">
                 <span class="content-name">Email</span>
             </label>
 
         </div>
         <div class="input">
-            <input type="password" name="psw" required value="@usr_password@"/>
+            <input type="password" name="usr_password" required value="@usr_password@"/>
             @usr_password_error@
-            <label for="password" class="label-name">
+            <label for="usr_password" class="label-name">
                 <span class="content-name">Password</span>
             </label>
 
         </div>
         <div class="input">
-            <input type="text" name="phone" required value="@usr_phone_nr@" />
-            <label for="phone" class="label-name">
+            <input type="text" name="usr_phone_nr" required value="@usr_phone_nr@" />
+            <label for="usr_phone_nr" class="label-name">
                 <span class="content-name">Phone number</span>
             </label>
 
         </div>
         <div class="input">
-            <input type="text" name="street" required value="@usr_street@"/>
-            <label for="street" class="label-name">
+            <input type="text" name="usr_street" required value="@usr_street@"/>
+            <label for="usr_street" class="label-name">
                 <span class="content-name">Street</span>
             </label>
         </div>
         <div class="input">
-            <input type="text" name="house" required value="@usr_h_nr@"/>
-            <label for="house" class="label-name">
+            <input type="text" name="usr_h_nr" required value="@usr_h_nr@"/>
+            <label for="usr_h_nr" class="label-name">
                 <span class="content-name">House</span>
             </label>
         </div>
         <div class="input">
-            <input type="text" name="zip_code" required value="@usr_postcode@"/>
-            <label for="zip_code" class="label-name">
+            <input type="text" name="usr_postcode" required value="@usr_postcode@"/>
+            <label for="usr_postcode" class="label-name">
                 <span class="content-name">Zip Code</span>
             </label>
         </div>
         <div class="input">
-            <input type="text" name="city" required value="@usr_city@"/>
-            <label for="city" class="label-name">
+            <input type="text" name="usr_city" required value="@usr_city@"/>
+            <label for="usr_city" class="label-name">
                 <span class="content-name">City</span>
             </label>
         </div>
         <div class="input">
-            <input type="text" name="country" required value="@usr_country@"/>
-            <label for="country" class="label-name">
+            <input type="text" name="usr_country" required value="@usr_country@"/>
+            <label for="usr_country" class="label-name">
                 <span class="content-name">Country</span>
             </label>
         </div>
