--- a/my_project/templates/myFormSignIn.html
+++ b/my_project/templates/myFormSignIn.html
@@ -1,5 +1,5 @@
 <div class="form-popup" id="myFormSignIn">
-    <form id="mainform" name="mainform" action="library/save.php" method="post" class="form-container">
+    <form id="signin" name="signin" action="library/save.php" method="post" class="form-container" target="signin">
         <input type="hidden" id="table" name="table" value="user">
         <input type="hidden" id="pkey" name="pkey" value="usr_id">
         <input type="hidden" id="afterinsert" name="afterinsert" value="signin.php">
