--- a/my_project/templates/alert-danger.html
+++ b/my_project/templates/alert-danger.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="alert alert-danger" role="alert" style="background-color: red">
+    <div class="error" role="alert">
         %msgs%
     </div>
 </div>
