--- a/my_project/templates/alert-success.html
+++ b/my_project/templates/alert-success.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="alert alert-success" role="alert" style="background-color: #45a049">
+    <div class="message" role="alert">
         %msgs%
     </div>
 </div>
