--- a/my_project/templates/login.html
+++ b/my_project/templates/login.html
@@ -1,19 +1,17 @@
 <div class="form-popup" id="myForm">
-    <form  class="form-container" action="library/login_check.php" method="post">
-        <input type="hidden" id="table" name="table" value="user">
-        <input type="hidden" id="pkey" name="pkey" value="usr_id">
-        <input type="hidden" id="afterinsert" name="afterinsert" value="index.php">
+    <form  class="form-container" name="myform" action="library/login_check.php" method="post">
+
         <input type="hidden" name="csrf" value="@csrf_token@">
         <h1>Login</h1>
         <div class="input">
-            <input type="text" name="email" required value="@usr_email@"/>
-            <label for="email" class="label-name">
+            <input type="email" name="usr_email" id="usr_email" value="" />
+            <label for="usr_email" class="label-name">
                 <span class="content-name">Email</span>
             </label>
         </div>
         <div class="input">
-            <input type="password" name="psw" required value="@usr_password@"/>
-            <label for="password" class="label-name">
+            <input type="password" name="usr_password" id="usr_password" value="" />
+            <label for="usr_password" class="label-name">
                 <span class="content-name">Password</span>
             </label>
         </div>
