--- a/my_project/templates/myFormSignIn.html
+++ b/my_project/templates/myFormSignIn.html
@@ -1,5 +1,5 @@
 <div class="form-popup" id="myFormSignIn">
-    <form id="signin" name="signin" action="library/save.php" method="post" class="form-container" target="signin">
+    <form id="signin" name="signin" action="library/save.php" method="post" class="form-container" target="myFormSignIn.html">
         <input type="hidden" id="table" name="table" value="user">
         <input type="hidden" id="pkey" name="pkey" value="usr_id">
         <input type="hidden" id="afterinsert" name="afterinsert" value="signin.php">
@@ -36,9 +36,10 @@
         </div>
         <div class="input">
             <input type="password" name="usr_password" id="usr_password" required value="@usr_password@"/>
+            @usr_password_error@
             <label for="usr_password" class="label-name">
                 <span class="content-name">Password</span>
-                @usr_password_error@
+
             </label>
         </div>
 
