--- a/my_project/templates/navigation.html
+++ b/my_project/templates/navigation.html
@@ -1,7 +1,7 @@
 <header>
   <nav>
     <div class="container">
-      <a href="index.html" class="home">
+      <a href="index.php" class="home">
         <h3 class="logo">Easy<span>Search</span></h3>
       </a>
 
@@ -39,6 +39,9 @@
       <div class="sign-links">
         <ul>
           <li>
+            <a class="left open-button" href="search_results.php">search</a>
+          </li>
+          <li>
             <a class="left open-button" onclick="openFormReg()" href="#"
               >Register</a
             >
@@ -55,33 +58,46 @@
         </ul>
       </div>
       <div class="hamburger">
-        <a>
-          <svg class="icon icon-align-left">
-            <use
-              xlink:href="./dist/icomoon/symbol-defs.svg#icon-align-left"
-            ></use>
-          </svg>
-        </a>
+        <div class="dropdown">
+          <a>
+            <svg class="icon icon-align-lefts">
+              <use
+                xlink:href="./dist/icomoon/symbol-defs.svg#icon-align-left"
+              ></use>
+            </svg>
+          </a>
+          <div class="dropdown-content">
+            <a class="left open-button" onclick="openFormReg()" href="#"
+              >Register</a
+            >
+            <a class="left open-button" onclick="openFormSign()" href="#"
+              >Sign in</a
+            >
+            <a class="left open-button" onclick="openForm()" href="#">Log in</a>
+          </div>
+        </div>
       </div>
     </div>
   </nav>
+  <div class="errors"></div>
+  <div class="message"></div>
   <h1 class="big_title">Find your doctor</h1>
   <img
-          src="./dist/images/drop1.png"
-          class="drop_1 translate"
-          data-speed="1.1"
-          alt=""
+    src="./dist/images/drop1.png"
+    class="drop_1 translate"
+    data-speed="1.1"
+    alt=""
   />
   <img
-          src="./dist/images/drop2.png"
-          class="drop_2 translate"
-          data-speed="1.4"
-          alt=""
+    src="./dist/images/drop2.png"
+    class="drop_2 translate"
+    data-speed="1.4"
+    alt=""
   />
   <img
-          src="./dist/images/water.png"
-          class="water translate"
-          data-speed="-0.1"
-          alt=""
+    src="./dist/images/water.png"
+    class="water translate"
+    data-speed="-0.1"
+    alt=""
   />
 </header>
