--- a/my_project/templates/register.html
+++ b/my_project/templates/register.html
@@ -1,5 +1,5 @@
 <div class="form-popup" id="register">
-    <form  class="form-container" action="library/save.php" method="post">
+    <form  class="form-container" action="" method="post">
         <input type="hidden" id="table" name="table" value="user">
         <input type="hidden" id="pkey" name="pkey" value="usr_id">
         <input type="hidden" id="afterinsert" name="afterinsert" value="index.php">
