--- a/my_project/templates/navigation.html
+++ b/my_project/templates/navigation.html
@@ -38,9 +38,7 @@
 
       <div class="sign-links">
         <ul>
-          <li>
-            <a class="left open-button" href="search_results.php">search</a>
-          </li>
+
           <li>
             <a class="left open-button" onclick="openFormReg()" href="#"
               >Register</a
@@ -55,7 +53,18 @@
           <li>
             <a class="left open-button" onclick="openForm()" href="#">Log in</a>
           </li>
+          <li>
+            <div class="dropdown">
+              <a class="left open-button" >GUEST</a>
+              <div class="dropdown-content">
+                <a href="profile.php">My Profile</a>
+                <a href="settings.php">My Settings</a>
+                <a href="logout.php">Logout</a>
+              </div>
+            </div>
+          </li>
         </ul>
+
       </div>
       <div class="hamburger">
         <div class="dropdown">
@@ -79,7 +88,7 @@
       </div>
     </div>
   </nav>
-  <div class="errors"></div>
+  <!--<div class="errors"></div>
   <div class="message"></div>
   <h1 class="big_title">Find your doctor</h1>
   <img
@@ -100,4 +109,4 @@
     data-speed="-0.1"
     alt=""
   />
-</header>
+</header> -->
