--- a/my_project/templates/alert-success.html
+++ b/my_project/templates/alert-success.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="message" role="alert">
+    <div class="message" role="alert" style="position: absolute; z-index: 60">
         %msgs%
     </div>
 </div>
