--- a/my_project/templates/myFormSignIn.html
+++ b/my_project/templates/myFormSignIn.html
@@ -1,8 +1,8 @@
 <div class="form-popup" id="myFormSignIn">
-    <form id="signin" name="signin" action="library/save.php" method="post" class="form-container" target="myFormSignIn.html">
+    <form id="signin" name="signin" action="library/save.php" method="post" class="form-container">
         <input type="hidden" id="table" name="table" value="user">
         <input type="hidden" id="pkey" name="pkey" value="usr_id">
-        <input type="hidden" id="afterinsert" name="afterinsert" value="signin.php">
+        <input type="hidden" id="afterinsert" name="afterinsert" value="index.php">
         <!-- end meta info -->
         <!-- security -->
         <input type="hidden" name="csrf" value="@csrf_token@">
