--- a/Exercises/OEF_4/OEF_4.5/templates/navbar.html
+++ b/Exercises/OEF_4/OEF_4.5/templates/navbar.html
@@ -15,10 +15,10 @@
                 <a class="nav-link text-light" href="./login.php">Login</a>
             </li>
         </ul>
-            <form class="form-inline  my-lg-0 mr-auto">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+        <form class="form-inline  my-lg-0 mr-auto">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
         <ul class = "navbar-nav" style="margin-right: 20px">
             <li class="nav-item dropdown" style="margin-right: 50px">
                 <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -28,7 +28,7 @@
                     <a class="dropdown-item text-dark" href="#">My Profile</a>
                     <a class="dropdown-item text-dark" href="#">My Settings</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-dark" href="logout.php">Log out</a>
+                    <a class="dropdown-item text-dark" href="./logout.php">Log out</a>
                 </div>
             </li>
 
